# thu-pm-fish-game

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  FishGame.vcxproj  Makefile  ai.cpp  ai.h  collision.cpp  collision.h  config.h  ecs.h  effect.cpp  effect.h  game.cpp  game.h  health.cpp  health.h  icon.rc  input.cpp  input.h  main.cpp  main.h  movement.cpp  movement.h  player.cpp  player.h  render.cpp  render.h  resource.h  role.cpp  role.h  scene.cpp  scene.h  score.cpp  score.h  spawn.cpp  spawn.h  timer.cpp  (+4 more)
